[tool.poetry]
name = "python-pin-payments"
version = "0.1.0"
description = ""
authors = ["Bohdan Salamakha <allen.avanheim@gmail.com>"]
readme = "README.md"
packages = [{include = "python_pin_payments"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
